--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@ limitations under the License.
   }
   </script>
 
+  <!-- ********** Handlebar Templates ********** -->
+
   <script id="tmpl-story" type="text/x-handlebars-template">
     <h1 class="story__title">{{ title }}</h1>
     <div class="story__score">{{ score }}</div>
@@ -65,6 +67,9 @@ limitations under the License.
     <div class="story-details-comment__text">{{{ text }}}</div>
   </script>
 
+
+  <!-- ********** Fonts and Styles ********** -->
+
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,500,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="styles/app.css">
 
@@ -73,14 +78,14 @@ limitations under the License.
   <body>
 
     <header class="header">
-
       <div class="header__title-wrapper">
         <h1 class="header__title">Hacker News</h1>
         <h2 class="header__subhead">Top Stories</h2>
       </div>
-
     </header>
 
+    <!-- The loading class triggers an animation that spins the image until -->
+    <!-- the data can be loaded from Hacker News -->
     <main class="loading">
     </main>
 
